--- a/R/string_practice.Rmd
+++ b/R/string_practice.Rmd
@@ -7,24 +7,34 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(datapasta)
+
+```
+##Task 3
+```{r}
+alarm_report <- data.frame(
+  stringsAsFactors = FALSE,
+              date = c("2020-03-14", "2020-03-15", "2020-04-10", "2020-04-18"),
+          building = c("Engineering-North",
+                       "Bren Hall","Engineering-South","Engr-North"),
+     alarm_message = c("10:02am – HVAC system down, facilities management alerted",
+                       "8:24am – Elevator North out of service",
+                       "12:41am – Fire alarm, UCSB fire responded and cleared",
+                       "9:58pm – Campus point emergency siren, UCPD responded")
+)
+
+str_practice <- alarm_report |>
+  mutate(building2 = str_replace(building, pattern = "Engr", replacement = "Engineering")) |> 
+  separate(col = building2,
+            into = c("building2", "wing"), sep = "-") |> 
+  filter(str_detect(alarm_message, pattern = "responded")) |> 
+  separate(col = alarm_message,
+           into = c("message_time", "alarm_message"), sep = " – ") |> 
+  mutate(date = lubridate::as_date(date))
+  
+  
+        
+
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
